---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-12-18
  Bugfixes:
    - Fixed that the initial square of a tape would not respect the "draw on ground" setting. (#37)
    - Fixed that the tapeline tool would be put into your cursor whenever you used ANY selection tool. (#40)
    - Fixed that the tapeline tool would be put into your cursor whenever a tape was destroyed. (#39)
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-12-16
  Changes:
    - Updated to Factorio 2.0.
    - Rewrote the mod from scratch.
    - Changed the "change divisor" hotkeys from shift + mousewheel to alt + mousewheel.
---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 2023-10-14
  Changes:
    - Tape color settings use color picker widgets (#32).
---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 2022-11-14
  Bugfixes:
    - Fixed a rare crash when changing controllers and changing the cursor stack on the same tick
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 2022-06-22
  Bugfixes:
    - Fixed that the 'not-selectable-in-game' flag was not set on the dummy entity
    - Fixed unknown key when dragging tapes
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: 2022-02-19
  Bugfixes:
    - Fixed a crash when another mod toggles the map editor before this mod can fully initialize (#28)
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2021-03-11
  Bugfixes: