@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when drawing a tape after the previous tape was deleted during drawing. (#38)
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.1
 Date: 2024-12-18
